# audio-saas

./: .env.example  .gitignore  pyproject.toml  requirements.txt
api/: index.py
audio_saas/: app.py
audio_saas/audio_saas/core/: settings.py
audio_saas/audio_saas/services/: audio_service.py  transcription_service.py
audio_saas/routers/: audio.py  auth.py  summary.py
audio_saas/services/: audio_service.py  summary_service.py  transcription_service.py
audio_saas/static/: app.js  index.html  style.css
